--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "web-vitals": "^2.1.4",
     "wifi-qr": "^0.0.13"
   },
@@ -43,6 +44,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.9",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0",
