--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wifi-qr-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://iwharris.github.io/wifi-qr-web",
   "dependencies": {
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.9",
     "eslint-config-prettier": "^8.5.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3"
