--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint-config-prettier": "^8.5.0",
     "gh-pages": "^4.0.0",
     "prettier": "^2.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.3"
   }
 }
